Increase margin to prevent overlap with scroll bar on medium screens.

--- a/stencil/src/components/pulumi-api-doc-filterable-nav/pulumi-api-doc-filterable-nav.scss
+++ b/stencil/src/components/pulumi-api-doc-filterable-nav/pulumi-api-doc-filterable-nav.scss
@@ -37,6 +37,6 @@
     }
 
     .filter-and-nav-tree {
-        margin-right: 8px;
+        margin-right: 12px;
     }
 }
